# YSU_pro

./: README.md
CPP_1/sever/: emp.txt  sever.py  student.json  test.py  user.json
CPP_1/user/cpp_proj/: CMakeLists.txt  SHA-256.cpp  SHA-256.h  list.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  output.txt  student.cpp  student.h  ui_mainwindow.h
CPP_1/user/cpp_proj/curl/include/ngtcp2/: ngtcp2_crypto_quictls.h
CPP_1/user/cpp_proj/curl/include/openssl/: aes.h  asn1.h  asn1t.h  bio.h  blowfish.h  bn.h  buffer.h  camellia.h  cast.h  chacha.h  cmac.h  cms.h  conf.h  conf_api.h  crypto.h  ct.h  curve25519.h  des.h  dh.h  dsa.h  dtls1.h  ec.h  ecdh.h  ecdsa.h  engine.h  err.h  evp.h  hkdf.h  hmac.h  idea.h  lhash.h  md4.h  md5.h  objects.h  ocsp.h  ossl_typ.h  pem.h  pkcs12.h  pkcs7.h  poly1305.h  (+20 more)
CPP_1/user/cpp_proj/cv_install/: setup_vars_opencv4.cmd
CPP_1/user/cpp_proj/cv_install/include/opencv2/core/: core_c.h  persistence.hpp
CPP_1/user/cpp_proj/cv_install/x64/mingw/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
CPP_1/user/cpp_proj/jsoncpp/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake  jsoncpp-targets.cmake  jsoncppConfig.cmake  jsoncppConfigVersion.cmake
CPP_1/user/cpp_proj/jsoncpp/include/json/: assertions.h  reader.h  value.h  version.h  writer.h
CPP_1/user/cpp_proj/lib/: json_update.cpp
CPP_1/user/cpp_proj/pgsql/include/server/: pg_config.h
CPP_1/user/cpp_proj/pgsql/include/server/common/: jsonapi.h
CPP_1/user/cpp_proj/pgsql/include/server/utils/: jsonb.h  jsonfuncs.h
CPP_1/user/cpp_proj/vcpkg/installed/x64-mingw-dynamic/include/: pg_config.h  zconf.h
CPP_1/user/cpp_proj/vcpkg/installed/x64-mingw-dynamic/include/postgresql/server/nodes/: primnodes.h
CPP_1/user/cpp_proj/vcpkg/installed/x64-mingw-dynamic/include/postgresql/server/parser/: kwlist.h
CPP_1/user/cpp_proj/vcpkg/installed/x64-mingw-dynamic/include/postgresql/server/utils/: json.h
CPP_2/SPMS/: SPMS.pro  change.cpp  change.h  change.ui  changeinfo.cpp  changeinfo.h  changeinfo.ui  info.cpp  info.h  input.cpp  input.h  input.ui  main.cpp  page_login.cpp  page_login.h  page_login.ui  page_manage.cpp  page_manage.h  page_manage.ui  page_stu.cpp  page_stu.h  page_stu.ui  sha256.cpp  sha256.h  statistics.cpp  statistics.h  statistics.ui  view.cpp  view.h  view.ui
